# pam_wordle

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
.github/workflows/: linux-x86_64.yml
cmake/modules/: FindPAM.cmake
src/: pam_wordle.cpp  pam_wordle.h
